# XRD_Shock_Strain

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
docs/superpowers/plans/: 2026-05-05-xrd-profile-v0.3.0-phase1.md  2026-05-05-xrd-profile-v0.4.0.md  2026-05-06-v030-v040-survey-comparison.md  2026-05-15-jac-n33-expansion.md
docs/superpowers/specs/: 2026-05-05-xrd-profile-v1-phase1-design.md  2026-05-05-xrd-profile-v1-phase2-design.md  2026-05-06-v030-v040-survey-comparison-design.md  2026-05-11-reference-phase-sensitivity-design.md  2026-05-15-jac-n33-expansion-design.md
examples/: instrumental_correction.py  lab_lunar_meteorite.py  multi_phase_olivine.py  synchrotron_high_shock.py  synchrotron_low_shock.py
examples/cifs/: Anorthite.cif  Pigeonite.cif  Quartz.cif  SOURCES.md
examples/data/: README.md
examples/legacy/: lab_lunar_meteorite.py  synchrotron_high_shock.py  synchrotron_low_shock.py
scripts/: build_synthetic_standard.py  regenerate_goldens.py
tests/: test_backward_compat.py  test_conversions.py  test_instrumental.py  test_pdf.py  test_phases.py  test_run_all.py  test_scherrer.py  test_size_distributions.py
tests/fixtures/: golden_v0.2.0_results.json  golden_v0.3.0_results.json  synthetic_lab6.xy  tirhert_subset.xy
xrd_profile/: __init__.py  conversions.py  instrumental.py  noise.py  pdf.py  peak_detection.py  phases.py  plots.py  profile.py  scherrer.py  size_distributions.py  warren_averbach.py  williamson_hall.py
xrd_profile/registry/: README.md
